@@ -17,7 +17,7 @@ T2_isr (void) __interrupt 5 //no using
 }
 #endif
 
-#if defined(SDCC_mcs51) || defined(SDCC_z80) || defined(PORT_HOST)
+#if defined(SDCC_mcs51) || defined(SDCC_z80) || defined(SDCC_z180) || defined(SDCC_r2k) || defined(PORT_HOST)
 
 void
 try_fun (jmp_buf catch, int except)
@@ -50,7 +50,7 @@ void f1(void)
 void
 testJmp (void)
 {
-#if defined(SDCC_mcs51) || defined(SDCC_z80) || defined(PORT_HOST)
+#if defined(SDCC_mcs51) || defined(SDCC_z80) || defined(SDCC_z180) || defined(SDCC_r2k) || defined(PORT_HOST)
   jmp_buf catch;
   int exception;
 
@@ -77,7 +77,7 @@ testJmp (void)
 //  ASSERT(0);
 //#endif
 
-#if defined(SDCC_mcs51) || defined(SDCC_z80) || defined(PORT_HOST)
+#if defined(SDCC_mcs51) || defined(SDCC_z80) || defined(SDCC_z180) || defined(SDCC_r2k) || defined(PORT_HOST)
   f1();
 #endif
 }
